# sellers_analitycs_meli

./: .gitattributes  README.md  config.py  meli_recomender_agent.py  requirements.txt  scaflod_package.py
data/: cluster_stats_empiricas.csv  df_challenge_meli.csv  df_challenge_meli_clusters.csv  df_challenge_meli_limpio.csv  pca_loadings.csv
data/outputs_prompts/: BASIC_RECOMMENDATION_PROMPT_HIPOTESIS.txt  BASIC_RECOMMENDATION_PROMPT_JSON.txt  inspector_stats.txt
meli_insight_engine/: README.md  pyproject.toml
meli_insight_engine/core/: __init__.py  connection.py  inspector.py  loader.py
meli_insight_engine/llm/: __init__.py
meli_insight_engine/llm/agents/: agent_template.py  rasoner_meli.py
meli_insight_engine/llm/prompts/: templates.py
meli_insight_engine/tests/: test_core.py
models/: kmeans.pkl  pre_pipe.pkl
notebooks/: 01_LMEDA_llm_4_data_analisys.ipynb  02_cluster.ipynb
